--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Proyecto_1S2122">
-        <activity android:name=".MainActivity">
+        android:theme="@style/miEstilo">
+        <activity
+            android:name=".vistas.MenuActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".vistas.MainActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
