--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.juego.proyecto_1s2122">
+    package="com.juego.proyecto_1s2122" >
+
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -8,7 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/miEstilo">
+        android:theme="@style/miEstilo" >
+        <activity android:name=".vistas.PruebaBuena" >
+        </activity>
+
         <activity
             android:name=".vistas.JuegoActivity"
             android:screenOrientation="landscape" />
@@ -26,7 +33,7 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".vistas.MainActivity"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
