conexion entre todos los dispositivos ya terminada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:name=".vistas.SalaEsperaActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".vistas.BuacarPartidaActivity"
+            android:name=".vistas.BuscarPartidaActivity"
             android:screenOrientation="landscape" />
         <activity
             android:name=".vistas.CrearPartidaActivity"
