--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.juego.proyecto_1s2122" >
+    package="com.juego.proyecto_1s2122">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -12,12 +12,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/miEstilo" >
-        <activity android:name=".vistas.PruebaBuena" >
-        </activity>
-
+        android:theme="@style/miEstilo">
         <activity
-            android:name=".vistas.JuegoActivity"
+            android:name=".vistas.JuegoExplotarActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".vistas.JuegoFrotarActivity"
+            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".vistas.JuegoPulsarActivity"
             android:screenOrientation="landscape" />
         <activity
             android:name=".vistas.SalaEsperaActivity"
@@ -33,7 +36,7 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".vistas.MainActivity"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
