--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.juego.proyecto_1s2122">
-
     <!-- Solicitar permisos de Bluetooth heredados en dispositivos más antiguos. -->
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-
-    <!-- Necesario para buscar dispositivos superiores a api 31. -->
-    <uses-permission android:name="android.permission.BLUETOOTH_SCAN"
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- Necesario para buscar dispositivos superiores a api 31. -->
+    <uses-permission
+        android:name="android.permission.BLUETOOTH_SCAN"
         android:usesPermissionFlags="neverForLocation"
-        tools:targetApi="31" />
-    <!-- Necesario para visibilizar dispositivos superiores a api 31. -->
-    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
-
-    <!-- Necesario para conectar dispositivos superiores a api 31. -->
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
-
-    <!-- Necesario para buscar dispositivos superiores a api 23. -->
+        tools:targetApi="31" /> <!-- Necesario para visibilizar dispositivos superiores a api 31. -->
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" /> <!-- Necesario para conectar dispositivos superiores a api 31. -->
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" /> <!-- Necesario para buscar dispositivos superiores a api 23. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -27,6 +20,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/miEstilo">
+        <activity
+            android:name=".vistas.EstadisticasActivity"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".vistas.CrearUsuarioActivity"
             android:screenOrientation="landscape" />
